# otodom_scraper

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yaml
src/: exceptions.py
src/database/: db.py  queries.py
src/scraper/: extraction.py  home_spider.py  parser.py  spider.py  transformation.py
src/utils/: file_utils.py  gcp_utils.py  http_util.py  log_util.py
src/watchman/: notifications.py  watchdog.py
