[project]
name = "home-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "opencv-python>=4.12.0.88",
    "psycopg[binary,pool]>=3.3.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]
